<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/lab_2_gui"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />


    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_weight="1"
        android:src="@drawable/flag"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="0dp" />


    <Button
        android:id="@+id/button"
        android:layout_width="173dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_weight="1"
        android:onClick="Click_here"
        android:text="@string/click_here"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/on_of_Switch"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />


    <androidx.appcompat.widget.SwitchCompat

        android:id="@+id/on_of_Switch"
        android:layout_width="181dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:text="@string/switch_on_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <EditText
        android:layout_width="294dp"
        android:layout_height="42dp"
        android:layout_marginTop="56dp"
        android:hint="@string/enter_name_here"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />


</androidx.constraintlayout.widget.ConstraintLayout>